chore: Fix bug with Unity player when deployed.

--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -3,7 +3,7 @@
     function load_demo(path)
     {
         document.getElementById("unity-demo").innerHTML = `
-        <iframe src="${path}"
+        <iframe src="../../${path}"
         width="640"
         height="360"
         style="overflow:visible; overflow-y: visible; overflow-x: visible;"
